refactor: domain names
